@@ -86,8 +86,9 @@ typedef enum {
 	TOKEN_STEP,
 	TOKEN_RETURN,
 	TOKEN_SCOPE,
+	TOKEN_SEQUENCE,
 
-	TOKEN_LAST_KEYWORD = TOKEN_SCOPE,
+	TOKEN_LAST_KEYWORD = TOKEN_SEQUENCE,
 
 	// two character tokens
 	TOKEN_LOWER_EQUAL,
@@ -281,9 +282,10 @@ typedef enum {
 	SUBMODE_IN = 1,			// MODE_VAR, MODE_ARG
 	SUBMODE_OUT = 2,
 	SUBMODE_REG = 4,		// variable is stored in register
-//	SUBMODE_REF = 8,
+	SUBMODE_IN_SEQUENCE = 8,
 	SUBMODE_ARG_IN  = 16,
 	SUBMODE_ARG_OUT = 32,
+	SUBMODE_OUT_SEQUENCE = 64,
 	SUBMODE_MAIN_FILE = 4	// this flag is set for main source file (asm is not included for main file, because it is generated by compiler)
 } VarSubmode;
 
